# SerpantOxide

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  cookies.txt
.agents/skills/evm-chainanalysis/: SKILL.md
.agents/skills/evm-chainanalysis/references/: evm-playbook.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPMENT.md  GIT_SPLIT.md  OPERATIONS.md  OPERATOR_RUNTIME_SPEC.md  TOOL_REFERENCE.md  macos-gpui-frontend-spec.md
python_assets/: crew_swarm.py  tools.py
scripts/: package_macos_app.sh
src/: browser.rs  capabilities.rs  config.rs  events.rs  evm_chain.rs  gpui_app.rs  graph.rs  hosting.rs  image_gen.rs  llm.rs  main.rs  mission.rs  nmap.rs  notes.rs  orchestrator.rs  osint.rs  pool.rs  prompts.rs  python_vm.rs  runtime.rs  sqlmap.rs  startup_trace.rs  terminal.rs  tui.rs  web_search.rs  worker_agent.rs
