[package]
name = "serpantoxide"
version = "0.1.0"
edition = "2024"
description = "A Rust command centre for autonomous security operations — orchestrator, worker agents, TUI, and native offensive-security tooling in one binary."
homepage = "https://github.com/Steake/SerpantOxide"
repository = "https://github.com/Steake/SerpantOxide"
license = "MIT"
keywords = ["security", "pentesting", "agent", "tui", "osint"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
rust-version = "1.85"

[[bin]]
name = "Serpantoxide"
path = "src/main.rs"

[dependencies]
rustpython-vm = { version = "0.4.0", features = ["freeze-stdlib"] }
rustpython-pylib = { version = "0.4.0", features = ["freeze-stdlib"] }
tokio = { version = "1.51.1", features = ["full"] }
chromiumoxide = "0.9.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
petgraph = "0.6"
regex = "1.10"
dotenv = "0.15.0"
chrono = "0.4"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
gpui = { version = "0.2.2", default-features = false, features = ["font-kit"] }

[profile.dev]
debug = 0
opt-level = "z"
strip = true
